Use string payload for Action deck generation
